[package]
name = "json-patch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
atty = "0.2.14"
anyhow = "1.0.79"
serde_json = "1.0.113"
json-patch = "1.2.0"